			vipListDefaultLimit and vipListDefaultPremiumLimit, mailMaxAttempts, mailBlockPeriod and mailAttemptsFadeTime,
			houseProtection. (Tryller)
		* Add new lua functions from TFS 0.4 doSteerCreature(cid, position[, maxNodes]). (Tryller)
		* Add old quest system based on unique id (quests.lua). (Tryller)
		* Clean actions, movements and weapons scripts to work only with 7.9 items (Tryller)
		* Only mysql and sqlite support. (Tryller)
		* Only console support. (Tryller)
		* Fix isItemStackable and isItemFluidContainer based on hard coded instead of lua. (Tryller)
		* Fix stamina system with 56 hours instead of 42. (Tryller)
		* Fix PlayerCustomFlag_HasFullLight not working properly. (Tryller)
		* Replace getItemWeight(uid[, precise = true]) with new one getItemWeight(itemid, count, <optional: default: 1> precise). (Tryller)
		* Replace account name with account number. (Tryller)
		* Replace randomize ground with hard coded (need to be fixed). (Tryller)
		* Replace lua getItemNameById(itemid) with getItemName(itemid) compat. (Tryller)
		* Replace doNpcSellItem(cid, itemid, amount, subType, ignoreCap, inBackpacks, backpack) with doNpcSellItem(cid, itemid, count, cost). (Tryller)
		* Updated Account Manager to work with account number instead of account name. (Tryller)
		* Updated characters death corpse ITEM_MALE_CORPSE = 3058, ITEM_FEMALE_CORPSE = 3065 to work with 7.9 protocol. (Tryller)
		* Updated npc system. (Tryller)
		* Remove shared experience. (Tryller)
		* Remove gamePort, adminPort and statusPort from config.lua. (Tryller)
		* Remove account name lua functions getAccountByName(name) and getAccountByAccountId(accId). (Tryller)
		* Remove swimming pool from 7.9 protocol. (Tryller)
		* Remove non 7.9 icons 	ICON_CURSED, ICON_BUFF, ICON_PZ and ICON_PROTECTIONZONE. (Tryller)
		* Remove Walkthrough and war emblem. (Tryller)
		* Remove not supported 7.9 outfits. (Tryller)
		* Remove not supported 7.9 monsters. (Tryller)