@@ -31,7 +31,8 @@ enum cylinderflags_t
 	FLAG_CHILDISOWNER = 8,			//Used by containers to query capacity of the carrier (player)
 	FLAG_PATHFINDING = 16,			//An additional check is done for floor changing/teleport items
 	FLAG_IGNOREFIELDDAMAGE = 32,	//Bypass field damage checks
-	FLAG_IGNORENOTMOVEABLE = 64		//Bypass check for movability
+	FLAG_IGNORENOTMOVEABLE = 64,		//Bypass check for movability
+	FLAG_IGNOREAUTOSTACK = 128		//__queryDestination will not try to stack items together
 };
 
 enum cylinderlink_t
