@@ -827,6 +827,7 @@ class Player : public Creature, public Cylinder
 
 		Position loginPosition;
 		LightInfo itemsLight;
+		std::pair<Container*, int32_t> backpack;
 
 		Vocation* vocation;
 		ProtocolGame* client;
